InternexDev_Sandbox/src/objects/Ineligible_Percentage_Limit__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Invoice_Limit__c</fullName>
        <label>Ineligibles Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>No_of_Days_to_add_Invoice_Date__c</fullName>
        <description>No of Days to add Invoice Date for Invoice Ineligible Type 1 Calculations</description>
        <label>No of Days to add Invoice Date</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Days_to_add_Invoice_Due_Date__c</fullName>
        <description>No of Days to add Invoice Due Date for Invoice Ineligible Type 1 Calculations</description>
        <label>No of Days to add Invoice Due Date</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Ineligible Percentage Limit</label>
</CustomObject>